# broker-news

./: README.md
.github/workflows/: news-digest.yml
broker-news-bot/: pyproject.toml
broker-news-bot/src/newsbot/: config.py  emailer.py  main.py  models.py  sources.py
reports/: latest_candidates.md
src/newsbot/: __init__.py  config.py  emailer.py  fetcher.py  main.py  sources.py
