[project]
name = "broker-news-bot"
version = "0.1.0"
description = "Daily brokerage strategy news digest bot."
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "python-dotenv>=1.0.1",
]

[project.scripts]
broker-news-bot = "newsbot.main:main"

[tool.setuptools.packages.find]
where = ["src"]
